src/app/components/shared/top-bar/topbar.component.scss
// Copyright 2022 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.
.margin-auto {
  margin: auto;
}

.spacer {
  flex: 1 1 auto;
}

.toolbar {
  max-height: 46px;
  min-height: 46px;
}

.team-text {
  text-align: right;
  margin-right: 10px;
}

.copy-text {
  cursor: pointer;
}

.view-text {
  font-size: 110%;
  margin-left: 50px;
  margin-right: 40px;
}

.big-button {
  width: 75%;
}

.small-button {
  width: 25%;
  padding-right: 40px;
}

.username-text {
  font-weight: normal;
}

.mat-mdc-button:not(:disabled),
.mat-mdc-icon-button:not(:disabled) {
  color: var(--mat-sys-on-primary);
}

mat-icon, .mat-icon {
  --mat-icon-color: var(--mat-sys-on-primary);
}

.margin-auto button mat-icon {
  color: var(--mat-sys-primary);
}

